@@ -47,11 +47,13 @@ designed to be compatible with ipMIDI for Windows (http://nerds.de).
 %dir %{_datadir}/icons/hicolor
 %dir %{_datadir}/icons/hicolor/32x32
 %dir %{_datadir}/icons/hicolor/32x32/apps
+%dir %{_datadir}/appdata
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
 %{_bindir}/%{name}
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/icons/hicolor/32x32/apps/%{name}.png
+%{_datadir}/appdata/%{name}.appdata.xml
 %{_datadir}/man/man1/%{name}.1.gz
 
 %changelog
